Fixed read more bug on z-index, fixed title for blog loop to accomodate long title and adjusted logo to the left by 10px

--- a/assets/css/2-modules/_blog_posts.sass
+++ b/assets/css/2-modules/_blog_posts.sass
@@ -56,7 +56,7 @@
 			position: relative
 			width: 500px
 			height: 20px
-			top: -20px
+			top: 20px
 			margin: 0 auto
 			padding: 0px
 			transition: all 0.2s ease-in-out
@@ -67,14 +67,14 @@
 				text-align: center
 				text-decoration: none
 				font-family: 'Teko', sans-serif
-				font-size: 18px
+				font-size: 14px
 				color: #f3f3f3
 
 		.featured_image
 			position: relative
 			width: 400px
 			height: 300px
-			top: -20px
+			top: 20px
 			left: 100px
 			padding: 0px
 			transition: all 0.2s ease-in-out
@@ -85,14 +85,14 @@
 			width: 500px
 			height: 150px
 			margin: 0 auto
-			top: -20px
+			top: 20px
 			padding: 0px
 			text-align: justify
 			transition: all 0.2s ease-in-out
 			//background-color: purple
 
 			p 
-				font-size: 14px
+				font-size: 11px
 				color: #f3f3f3
 
 		.read_more_button
@@ -177,7 +177,7 @@
 				//border: solid	
 					//color: violet
 				transition: all 0.2s ease-in-out
-				top: -40px
+				top: 20px
 				width: 350px
 				height: 25px
 
@@ -195,7 +195,7 @@
 				transition: all 0.2s ease-in-out	
 				width: 400px
 				height: 180px
-				top: -20px
+				top: 20px
 
 			.read_more_button
 				position: relative
@@ -239,7 +239,7 @@
 				//border: solid	
 					//color: violet
 				transition: all 0.2s ease-in-out
-				top: -20px
+				top: 30px
 				width: 350px
 				height: 25px
 
@@ -250,7 +250,7 @@
 			.featured_image
 				//border: solid
 					//color: green
-				top: -20px
+				top: 20px
 				left: 50px
 				width: 300px
 				height: 225px
@@ -262,7 +262,7 @@
 				transition: all 0.2s ease-in-out	
 				width: 300px
 				height: 225px
-				top: -20px
+				top: 20px
 
 
 
@@ -303,7 +303,7 @@
 				//border: solid	
 					//color: violet
 				transition: all 0.2s ease-in-out
-				top: -20px
+				top: 80px
 				width: 290px
 				height: 25px
 
@@ -314,7 +314,7 @@
 			.featured_image
 				//border: solid
 					//color: green
-				top: -20px
+				top: 90px
 				left: 12px
 				width: 260px
 				height: 195px
@@ -325,5 +325,5 @@
 					//color: yellow
 				width: 250px
 				height: 280px
-				top: -20px
+				top: 90px
 
