--- a/assets/css/2-modules/_header.sass
+++ b/assets/css/2-modules/_header.sass
@@ -8,14 +8,14 @@
 	background: #bd3316
 	color: white
 	font-size: 1.125rem
-	z-index: 2
+	z-index: 3
 
 .header_logo
 	position: relative
 	width: 50px
 	height: 50px
 	top: 10px
-	left: 20px
+	left: 10px
 	background: white
 
 .header_navigation
@@ -41,7 +41,7 @@
 	width: 30px
 	height: 30px
 	top: 25px
-	right: 20px
+	right: 10px
 	background:
 		image: url(../img/menu_button.svg)
 		repeat: no-repeat
@@ -57,7 +57,7 @@
 	min-height: 100%
 	border-left: none
 		color: white
-	z-index: 2
+	z-index: 3
 	transition: all 0.2s ease-in-out
 	ul
 		position: fixed
