--- a/assets/css/2-modules/_side_bar.sass
+++ b/assets/css/2-modules/_side_bar.sass
@@ -31,21 +31,22 @@
 		//border: solid
 		p 
 			color: white
-			font-size: 14px
+			font-size: 11px
 			margin-top: -1px
 			text-align: left
 
 	.read_more_button
 		position: relative
-		top: 0px
-		left: 195px
+		top: -57px
+		left: 90px
+		//border: solid
 		z-index: 2
 
 		a 
 			text-decoration: none
 		p
 			color: skyblue
-			font-size: 14px
+			font-size: 11px
 
 .social_media_section
 	position: absolute
@@ -83,6 +84,13 @@
 		transition: all 0.2s ease-in-out
 		//border: solid
 
+		.read_more_button
+			//border: solid
+			top: -58px
+			left: 90px
+			p
+				font-size: 11px
+
 	.social_media_section
 		width: 280px
 		height: 50px
@@ -98,6 +106,13 @@
 		left: 30px
 		transition: all 0.2s ease-in-out
 		//border: solid
+
+		.read_more_button
+			//border: solid
+			top: -58px
+			left: 90px
+			p
+				font-size: 11px
 
 	.social_media_section
 		width: 280px
@@ -126,8 +141,11 @@
 
 		.read_more_button
 			//border: solid
-			top: -48px
-			left: 110px
+			top: -94px
+			left: 320px
+			p
+				font-size: 11px
+		
 		
 		
 	.social_media_section
@@ -174,8 +192,10 @@
 
 		.read_more_button
 			//border: solid
-			top: 16px
-			left: 75px
+			top: -57px
+			left: 115px
+			p
+				font-size: 11px
 		
 		
 	.social_media_section
